[gd_scene load_steps=2 format=3 uid="uid://dr5sw32m5xnnx"]

[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_n0p6g"]

[node name="PauseScreen" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 646.0
script = ExtResource("1_n0p6g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 646.0
color = Color(0, 0, 0, 0.392157)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 80.0
offset_right = 689.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 64
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 280.0
offset_right = 760.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 384.0
offset_right = 760.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 32
text = "Settings
"

[node name="BackToMainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 488.0
offset_right = 760.0
offset_bottom = 552.0
theme_override_font_sizes/font_size = 32
text = "Back To Main Menu"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="BackToMainMenuButton" to="." method="_on_back_to_main_menu_button_pressed"]
